clean up class system